--- a/serialResponseWindow.ui
+++ b/serialResponseWindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1013</width>
+    <width>980</width>
     <height>561</height>
    </rect>
   </property>
@@ -14,56 +14,11 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QWidget" name="">
-    <property name="geometry">
-     <rect>
-      <x>740</x>
-      <y>100</y>
-      <width>271</width>
-      <height>151</height>
-     </rect>
-    </property>
-    <layout class="QGridLayout" name="gridLayout_2">
-     <item row="1" column="1">
-      <widget class="QLineEdit" name="newAssocData"/>
-     </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="label_4">
-       <property name="text">
-        <string>Input ID</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="label_5">
-       <property name="text">
-        <string>Resp. Data</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="QComboBox" name="newAssocID"/>
-     </item>
-    </layout>
-   </widget>
-   <widget class="QPushButton" name="addAssociationbtn">
-    <property name="geometry">
-     <rect>
-      <x>780</x>
-      <y>260</y>
-      <width>198</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Add</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="updateLookupTablebtn">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>470</y>
+      <x>670</x>
+      <y>460</y>
       <width>200</width>
       <height>31</height>
      </rect>
@@ -75,9 +30,9 @@
    <widget class="QTableWidget" name="cmdRespAssocTbl">
     <property name="geometry">
      <rect>
-      <x>450</x>
-      <y>40</y>
-      <width>281</width>
+      <x>560</x>
+      <y>30</y>
+      <width>401</width>
       <height>421</height>
      </rect>
     </property>
@@ -101,7 +56,7 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>480</x>
+      <x>690</x>
       <y>0</y>
       <width>151</width>
       <height>31</height>
@@ -115,9 +70,9 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>0</y>
-      <width>409</width>
-      <height>500</height>
+      <y>10</y>
+      <width>551</width>
+      <height>491</height>
      </rect>
     </property>
     <property name="maximumSize">
@@ -136,10 +91,10 @@
      <widget class="QWidget" name="gridLayoutWidget">
       <property name="geometry">
        <rect>
-        <x>60</x>
-        <y>100</y>
-        <width>271</width>
-        <height>140</height>
+        <x>140</x>
+        <y>280</y>
+        <width>231</width>
+        <height>121</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_3">
@@ -153,7 +108,7 @@
        <item row="2" column="0">
         <widget class="QLabel" name="label_9">
          <property name="text">
-          <string>Resp. Freq (msec)</string>
+          <string>Freq (msec)</string>
          </property>
         </widget>
        </item>
@@ -185,18 +140,56 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="horizontalLayoutWidget_3">
+     <widget class="QTableWidget" name="tableWidget">
       <property name="geometry">
        <rect>
-        <x>20</x>
-        <y>310</y>
-        <width>351</width>
-        <height>80</height>
+        <x>60</x>
+        <y>30</y>
+        <width>431</width>
+        <height>241</height>
        </rect>
       </property>
-      <layout class="QHBoxLayout" name="horizontalLayout_4">
+      <column>
+       <property name="text">
+        <string>ID</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Data</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>CRC</string>
+       </property>
+      </column>
+     </widget>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>10</y>
+        <width>111</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Incoming Data</string>
+      </property>
+     </widget>
+     <widget class="QWidget" name="horizontalLayoutWidget">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>402</y>
+        <width>431</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
-        <spacer name="horizontalSpacer_8">
+        <spacer name="horizontalSpacer_3">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
@@ -216,7 +209,7 @@
         </widget>
        </item>
        <item>
-        <spacer name="horizontalSpacer_9">
+        <spacer name="horizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
@@ -236,7 +229,7 @@
         </widget>
        </item>
        <item>
-        <spacer name="horizontalSpacer_10">
+        <spacer name="horizontalSpacer_2">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
@@ -256,7 +249,7 @@
         </widget>
        </item>
        <item>
-        <spacer name="horizontalSpacer_11">
+        <spacer name="horizontalSpacer_4">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
@@ -278,7 +271,7 @@
      <widget class="QWidget" name="horizontalLayoutWidget_2">
       <property name="geometry">
        <rect>
-        <x>80</x>
+        <x>150</x>
         <y>370</y>
         <width>228</width>
         <height>80</height>
@@ -343,7 +336,7 @@
      <widget class="QTableWidget" name="IOLog">
       <property name="geometry">
        <rect>
-        <x>40</x>
+        <x>110</x>
         <y>40</y>
         <width>311</width>
         <height>321</height>
@@ -368,7 +361,7 @@
      <widget class="QLabel" name="label_11">
       <property name="geometry">
        <rect>
-        <x>130</x>
+        <x>200</x>
         <y>10</y>
         <width>121</width>
         <height>21</height>
@@ -379,19 +372,69 @@
       </property>
      </widget>
     </widget>
-   </widget>
-   <widget class="QLabel" name="label_7">
-    <property name="geometry">
-     <rect>
-      <x>810</x>
-      <y>70</y>
-      <width>131</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>New Association</string>
-    </property>
+    <widget class="QWidget" name="NewAssoc">
+     <attribute name="title">
+      <string>New Association</string>
+     </attribute>
+     <widget class="QPushButton" name="addAssociationbtn">
+      <property name="geometry">
+       <rect>
+        <x>170</x>
+        <y>260</y>
+        <width>198</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Add</string>
+      </property>
+     </widget>
+     <widget class="QWidget" name="layoutWidget">
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>100</y>
+        <width>241</width>
+        <height>151</height>
+       </rect>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_2">
+       <item row="1" column="1">
+        <widget class="QLineEdit" name="newAssocData"/>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="label_4">
+         <property name="text">
+          <string>Input ID</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="label_5">
+         <property name="text">
+          <string>Resp. Data</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QComboBox" name="newAssocID"/>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QLabel" name="label_7">
+      <property name="geometry">
+       <rect>
+        <x>190</x>
+        <y>70</y>
+        <width>131</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>New Association</string>
+      </property>
+     </widget>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -399,7 +442,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1013</width>
+     <width>980</width>
      <height>27</height>
     </rect>
    </property>
