--- a/serialResponseWindow.ui
+++ b/serialResponseWindow.ui
@@ -149,7 +149,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QTableWidget" name="tableWidget">
+     <widget class="QTableWidget" name="pIncomingLog">
       <property name="geometry">
        <rect>
         <x>60</x>
